display all books

--- a/html/pages/start.html
+++ b/html/pages/start.html
@@ -4,8 +4,15 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form> -->
-    <h2>Home page</h2>
-    <p>This is the home page</p>
 
+    <section>
+
+      <div class="content">
+        <a href=""></a>
+        <h2>Home page</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos magnam impedit iure dicta, laudantium omnis necessitatibus incidunt cumque blanditiis dolores, cupiditate, ipsum adipisci doloribus voluptatibus maiores voluptas! Nemo, veniam quos!</p>
+
+      </div>
+    </section>
   </div>
 </div>
