--- a/html/parts/nav.html
+++ b/html/parts/nav.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/books">Books</a>
+        </li>
         <li class="nav-item dropdown">
           <a active-if-url-starts-with="/photos" class="nav-link dropdown-toggle" href="#" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,7 +38,7 @@
       <div class="input-group">
         <input type="search" class="form-control" placeholder="Search anything...">
         <button type="button" class="btn btn-primary">
-          <i class="fa fa-search"></i>
+          <i class="fa fa-search">Search</i>
         </button>
       </div>
     </div>
