--- a/html/pages/ux-books.html
+++ b/html/pages/ux-books.html
@@ -1,1 +1,10 @@
-<h2>FInd books about UX</h2>
+<div class="row mb-3">
+  <div class="col">
+    <h2>My photos of fruits</h2>
+  </div>
+</div>
+<div class="row">
+  <div repeat="20" class="col-6 col-sm-4 col-lg-3 col-xxl-2">
+    <img class="photo mb-4 border border-dark-subtle" src="https://source.unsplash.com/random/?books">
+  </div>
+</div>
