--- a/html/parts/nav.html
+++ b/html/parts/nav.html
@@ -18,29 +18,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/books">Books</a>
         </li>
-        <li class="nav-item dropdown">
-          <a active-if-url-starts-with="/photos" class="nav-link dropdown-toggle" href="#" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Categories
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="ux-books">UX</a></li>
-            <li><a class="dropdown-item" href="html-books">HTML</a></li>
-            <li><a class="dropdown-item" href="css-books">CSS</a></li>
-            <li><a class="dropdown-item" href="javascript-books">JAVASCRIPT</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="photos-portraits">Portraits</a></li>
-          </ul>
-        </li>
       </ul>
-      <div class="input-group">
-        <input type="search" class="form-control" placeholder="Search anything...">
-        <button type="button" class="btn btn-primary">
-          <i class="fa fa-search">Search</i>
-        </button>
-      </div>
+      <button class="basketButton navbar-toggler basketHasBooks" type="button" data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-basket3"
+          viewBox="0 0 16 16">
+          <path
+            d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM3.394 15l-1.48-6h-.97l1.525 6.426a.75.75 0 0 0 .729.574h9.606a.75.75 0 0 0 .73-.574L15.056 9h-.972l-1.479 6h-9.21z" />
+        </svg>
+      </button>
     </div>
   </div>
 </nav>
